{
  "version": 4,
  "terraform_version": "1.0.0",
  "serial": 17,
  "lineage": "d959d4f1-7c13-54c5-20bf-df2c937a4904",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_nat_gateway",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/652077be-d7e2-49de-aaea-d456f141874c/resourceGroups/cloud/providers/Microsoft.Network/natGateways/app-nat-gateway",
            "idle_timeout_in_minutes": 4,
            "location": "westeurope",
            "name": "app-nat-gateway",
            "resource_group_name": "cloud",
            "resource_guid": "7f26f9cd-9e3b-45d7-ab55-95f9a4f1f680",
            "sku_name": "Standard"
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/652077be-d7e2-49de-aaea-d456f141874c/resourceGroups/cloud/providers/Microsoft.Network/networkInterfaces/cloud-nic",
            "internal_domain_name_suffix": "mkfoscpgrb1e5hvjtl0mrddcif.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "cloud-config-01",
                "primary": true,
                "private_ip_address": "10.0.3.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/652077be-d7e2-49de-aaea-d456f141874c/resourceGroups/cloud/providers/Microsoft.Network/publicIPAddresses/nat-public-ip",
                "subnet_id": "/subscriptions/652077be-d7e2-49de-aaea-d456f141874c/resourceGroups/cloud/providers/Microsoft.Network/virtualNetworks/cloud-vnet/subnets/app-subnet"
              }
            ],
            "location": "westeurope",
            "name": "cloud-nic",
            "private_ip_address": "10.0.3.4",
            "private_ip_addresses": [
              "10.0.3.4"
            ],
            "resource_group_name": "cloud",
            "tags": {
              "user": "devops"
            }
          },
          "dependencies": [
            "azurerm_public_ip.nat_public_ip",
            "azurerm_resource_group.rg",
            "azurerm_subnet.app_subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "app_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/652077be-d7e2-49de-aaea-d456f141874c/resourceGroups/cloud/providers/Microsoft.Network/networkSecurityGroups/app-sg",
            "location": "westeurope",
            "name": "app-sg",
            "resource_group_name": "cloud",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "8080",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowAppTraffic",
                "priority": 201,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "db_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/652077be-d7e2-49de-aaea-d456f141874c/resourceGroups/cloud/providers/Microsoft.Network/networkSecurityGroups/db-sg",
            "location": "westeurope",
            "name": "db-sg",
            "resource_group_name": "cloud",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3306",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowDBTraffic",
                "priority": 301,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "web_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/652077be-d7e2-49de-aaea-d456f141874c/resourceGroups/cloud/providers/Microsoft.Network/networkSecurityGroups/web-sg",
            "location": "westeurope",
            "name": "web-sg",
            "resource_group_name": "cloud",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowWebTraffic",
                "priority": 101,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "nat_public_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/652077be-d7e2-49de-aaea-d456f141874c/resourceGroups/cloud/providers/Microsoft.Network/publicIPAddresses/nat-public-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "108.143.173.200",
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "nat-public-ip",
            "resource_group_name": "cloud",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "app_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.3.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/652077be-d7e2-49de-aaea-d456f141874c/resourceGroups/cloud/providers/Microsoft.Network/virtualNetworks/cloud-vnet/subnets/app-subnet",
            "name": "app-subnet",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "cloud",
            "virtual_network_name": "cloud-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "db_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/652077be-d7e2-49de-aaea-d456f141874c/resourceGroups/cloud/providers/Microsoft.Network/virtualNetworks/cloud-vnet/subnets/db-subnet",
            "name": "db-subnet",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "cloud",
            "virtual_network_name": "cloud-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "web_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/652077be-d7e2-49de-aaea-d456f141874c/resourceGroups/cloud/providers/Microsoft.Network/virtualNetworks/cloud-vnet/subnets/web-subnet",
            "name": "web-subnet",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "cloud",
            "virtual_network_name": "cloud-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_nat_gateway_association",
      "name": "nat_gateway_subnet_ass",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/652077be-d7e2-49de-aaea-d456f141874c/resourceGroups/cloud/providers/Microsoft.Network/virtualNetworks/cloud-vnet/subnets/app-subnet",
            "nat_gateway_id": "/subscriptions/652077be-d7e2-49de-aaea-d456f141874c/resourceGroups/cloud/providers/Microsoft.Network/natGateways/app-nat-gateway",
            "subnet_id": "/subscriptions/652077be-d7e2-49de-aaea-d456f141874c/resourceGroups/cloud/providers/Microsoft.Network/virtualNetworks/cloud-vnet/subnets/app-subnet"
          },
          "dependencies": [
            "azurerm_nat_gateway.nat_gateway",
            "azurerm_resource_group.rg",
            "azurerm_subnet.app_subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "app_sg_ass",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/652077be-d7e2-49de-aaea-d456f141874c/resourceGroups/cloud/providers/Microsoft.Network/virtualNetworks/cloud-vnet/subnets/app-subnet",
            "network_security_group_id": "/subscriptions/652077be-d7e2-49de-aaea-d456f141874c/resourceGroups/cloud/providers/Microsoft.Network/networkSecurityGroups/app-sg",
            "subnet_id": "/subscriptions/652077be-d7e2-49de-aaea-d456f141874c/resourceGroups/cloud/providers/Microsoft.Network/virtualNetworks/cloud-vnet/subnets/app-subnet"
          },
          "dependencies": [
            "azurerm_network_security_group.app_sg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.app_subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "db_sg_ass",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/652077be-d7e2-49de-aaea-d456f141874c/resourceGroups/cloud/providers/Microsoft.Network/virtualNetworks/cloud-vnet/subnets/db-subnet",
            "network_security_group_id": "/subscriptions/652077be-d7e2-49de-aaea-d456f141874c/resourceGroups/cloud/providers/Microsoft.Network/networkSecurityGroups/db-sg",
            "subnet_id": "/subscriptions/652077be-d7e2-49de-aaea-d456f141874c/resourceGroups/cloud/providers/Microsoft.Network/virtualNetworks/cloud-vnet/subnets/db-subnet"
          },
          "dependencies": [
            "azurerm_network_security_group.db_sg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.db_subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "web_sg_ass",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/652077be-d7e2-49de-aaea-d456f141874c/resourceGroups/cloud/providers/Microsoft.Network/virtualNetworks/cloud-vnet/subnets/web-subnet",
            "network_security_group_id": "/subscriptions/652077be-d7e2-49de-aaea-d456f141874c/resourceGroups/cloud/providers/Microsoft.Network/networkSecurityGroups/web-sg",
            "subnet_id": "/subscriptions/652077be-d7e2-49de-aaea-d456f141874c/resourceGroups/cloud/providers/Microsoft.Network/virtualNetworks/cloud-vnet/subnets/web-subnet"
          },
          "dependencies": [
            "azurerm_network_security_group.web_sg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.web_subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "09e98a62-88e6-4f76-9ea9-9af4c88c6245",
            "id": "/subscriptions/652077be-d7e2-49de-aaea-d456f141874c/resourceGroups/cloud/providers/Microsoft.Network/virtualNetworks/cloud-vnet",
            "location": "westeurope",
            "name": "cloud-vnet",
            "resource_group_name": "cloud"
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    }
  ]
}